<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      >

    <TextView
        android:id="@+id/textView2"
        android:paddingEnd="16dp"
        android:text="@string/tv_counter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/counter_row"
        />

    <TextView
        android:id="@+id/tv_counter"
        android:paddingEnd="32dp"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/counter_row"
        />
    <ImageView
        android:id="@+id/arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_arrow_forward"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_counter"
        app:layout_constraintStart_toEndOf="@id/tv_counter"
        app:layout_constraintTop_toTopOf="@+id/tv_counter"
        />

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_arrow_back"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_counter"
        app:layout_constraintStart_toEndOf="@id/tv_counter"
        app:layout_constraintTop_toTopOf="@+id/tv_counter"
        />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:thumb="@drawable/point"
        app:layout_constraintBottom_toTopOf="@+id/btn_set_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        style="@style/CustomSeekBar"
        />
    <Button
        android:id="@+id/btn_set_counter"
        android:layout_marginTop="48dp"
        android:text="@string/set_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        style="@style/button_style"
        />
    <Button
        android:id="@+id/btn_minus_1"
        android:layout_marginTop="8dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_counter"
        style="@style/button_style"
        />
    <Button
        android:id="@+id/btn_set_zero"
        android:layout_marginTop="8dp"
        android:text="@string/set_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus_1"
        style="@style/button_style"
        />
    <Button
        android:id="@+id/btn_change_side"
        android:layout_marginTop="8dp"
        android:text="@string/change_side"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_zero"
        style="@style/button_style"
        />
  </android.support.constraint.ConstraintLayout>
</ScrollView>